--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, John!
+        run: curl http://127.0.0.1:3000/johnkoenigninjasitecounter
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
