--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: curl http://127.0.0.1:3000/johnkoenigninjasitecounter
-
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sam local invoke crcServerlessFunction -e events/event.json
+          sam local start-api
+          curl http://127.0.0.1:3000/johnkoenigninjasitecounter
   build-deploy:
     runs-on: ubuntu-latest
     steps:
