--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           sam local invoke crcServerlessFunction -e events/event.json
           sam local start-api
-          curl http://127.0.0.1:3000/prod/johnkoenigninjasitecounter
+          sam local curl http://127.0.0.1:3000/prod/johnkoenigninjasitecounter
   build-deploy:
     runs-on: ubuntu-latest
     steps:
@@ -49,3 +49,4 @@ jobs:
 
 # sam deploy
       - run: sam deploy #--no-confirm-changeset --no-fail-on-empty-changeset --stack-name sitecounter --s3-bucket aws-sam-cli-managed-default-samclisourcebucket-12lkd9h2oeinw --capabilities CAPABILITY_IAM --region us-east-2
+      - run: sam https://40vk7pg898.execute-api.us-east-2.amazonaws.com/Prod/johnkoenigninjasitecounter/
