--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Pre-Deployment Test
-        run: |
-          r = requests.get('https://www.github.com')
-          r.status_code
+      #- name: Pre-Deployment Test
+      #  run: | 
       #   sam local invoke crcServerlessFunction -e events/event.json
       #    sam local start-api
       #    curl http://www.google.com
