--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,16 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Pre-Deployment Test
+        run: | 
+          sam local invoke crcServerlessFunction -e events/event.json
+          sam local start-api
+          
       - name: Check https status
         uses: lakuapik/gh-actions-http-status@v1
         with:
           sites: '["http://github.com", "https://education.github.com", "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"]'
           expected: '[301, 200, 200]'
-      # Runs a set of commands using the runners shell
-      #- name: Pre-Deployment Test
-      #  run: | 
-      #   sam local invoke crcServerlessFunction -e events/event.json
-      #    sam local start-api
-      #    curl http://www.google.com
   
   build-deploy:
     runs-on: ubuntu-latest
