--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Check https status
         uses: lakuapik/gh-actions-http-status@v1
         with:
-          sites: '["http://github.com", "https://education.github.com", "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"]'
-          expected: '[301, 200, 200]'
+          sites: '["https://johnkoenig.ninja", "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"]'
+          expected: '[200, 200]'
   
   build-deploy:
     runs-on: ubuntu-latest
