--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      #- name: Pre-Deployment Test
-      #  run: | 
-      #    sam local invoke crcServerlessFunction -e events/event.json
+      - name: Pre-Deployment Test
+        run: | 
+          sam local invoke crcServerlessFunction -e events/event.json
       #    sam local start-api
 
       - name: Check https status
