--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Check https status
         uses: lakuapik/gh-actions-http-status@v1
         with:
-          sites: '["https://johnkoenig.ninja", "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"]'
-          expected: '[200, 200]'
+          sites: '["https://johnkoenig.ninja"]'
+          expected: '[200]'
 
       # sam build 
       - run: sam build --use-container
