--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,13 @@ jobs:
       - name: Pre-Deployment Test
         run: | 
           sam local invoke crcServerlessFunction -e events/event.json
+          curl "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"
 
       - name: Check https status
         uses: lakuapik/gh-actions-http-status@v1
         with:
           sites: '["https://johnkoenig.ninja"]'
-          expected: '[201]'
+          expected: '[200]'
 
       # sam build 
       - run: sam build --use-container
