--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: | 
           sam local invoke crcServerlessFunction -e events/event.json
           sam local start-api
-          curl "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"
+        #  curl "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"
 
       - name: Check https status
         uses: lakuapik/gh-actions-http-status@v1
