--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Pre-Deployment Test
         run: | 
           sam local invoke crcServerlessFunction -e events/event.json
-          sam local start-api
+          sam local start-api  > /dev/null 2>&1 &
         #  curl "http://127.0.0.1:3000/Prod/johnkoenigninjasitecounter/"
 
       - name: Check https status
