--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: Pre-Deployment Test
+      - name: Local Docker API Test
         run: | 
           sam local invoke crcServerlessFunction -e events/event.json
           sam local start-api  > /dev/null 2>&1 &
@@ -35,11 +35,5 @@ jobs:
       # sam build 
       - run: sam build --use-container
 
-# Run Unit tests- Specify unit tests here 
-
-# sam deploy
+      # sam deploy
       - run: sam deploy #--no-confirm-changeset --no-fail-on-empty-changeset --stack-name sitecounter --s3-bucket aws-sam-cli-managed-default-samclisourcebucket-12lkd9h2oeinw --capabilities CAPABILITY_IAM --region us-east-2
-
-# Post Deployment Test
-#      - name: Post Deployment Test
-#      - run: sam https://40vk7pg898.execute-api.us-east-2.amazonaws.com/Prod/johnkoenigninjasitecounter/
